--- a/src/index.scss
+++ b/src/index.scss
@@ -15,23 +15,23 @@ body {
 
 .slide-in-left-enter {
   transform: translateX(-100%);
-}
 
-.slide-in-left-enter-active {
-  transform: translateX(0);
-  opacity: 1;
-  transition: all 200ms;
+  &-active {
+    transform: translateX(0);
+    opacity: 1;
+    transition: all 500ms;
+  }
 }
 
 .slide-in-left-exit {
   transform: translateX(0%);
   opacity: 1;
-}
 
-.slide-in-left-exit-active {
-  transform: translateX(-100%);
-  opacity: 0;
-  transition: all 200ms;
+  &-active {
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: all 500ms;
+  }
 }
 
 .center {
