--- a/src/places/pages/NewPlace/NewPlace.scss
+++ b/src/places/pages/NewPlace/NewPlace.scss
@@ -7,4 +7,9 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 8px;
   background: #292929;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    padding: 1rem;
+  }
 }
