--- a/src/index.scss
+++ b/src/index.scss
@@ -40,3 +40,11 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.wrapper {
+  padding: 2rem;
+
+  @media screen and (max-width: 768px) {
+    padding: 1.5rem;
+  }
+}
