--- a/src/index.scss
+++ b/src/index.scss
@@ -48,3 +48,28 @@ body {
     padding: 1.5rem;
   }
 }
+
+.title {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  color: #fff;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.form_wrapper {
+  list-style: none;
+  margin: 0 auto;
+  padding: 1rem 2rem;
+  width: 90%;
+  max-width: 40rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 8px;
+  background: #292929;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    padding: 1rem;
+  }
+}
