feat: add delete logic for place item

--- a/src/places/components/PlaceItem/PlaceItem.scss
+++ b/src/places/components/PlaceItem/PlaceItem.scss
@@ -39,7 +39,14 @@
 
   &__modal {
     &-content {
-      padding: 0;
+      &_map {
+        padding: 0;
+      }
+      &_text {
+        padding: 1rem;
+        color: #fff;
+        font-size: 18px;
+      }
     }
 
     &-actions {
