--- a/src/index.scss
+++ b/src/index.scss
@@ -13,24 +13,25 @@ body {
   background: #4d4d4d;
 }
 
-.slide-in-left-enter {
-  transform: translateX(-100%);
-
-  &-active {
-    transform: translateX(0);
-    opacity: 1;
-    transition: all 500ms;
-  }
-}
-
-.slide-in-left-exit {
-  transform: translateX(0%);
-  opacity: 1;
-
-  &-active {
+.slide-in-left {
+  &-enter {
     transform: translateX(-100%);
-    opacity: 0;
-    transition: all 500ms;
+
+    &-active {
+      transform: translateX(0);
+      opacity: 1;
+      transition: all 500ms;
+    }
+  }
+  &-exit {
+    transform: translateX(0%);
+    opacity: 1;
+
+    &-active {
+      transform: translateX(-100%);
+      opacity: 0;
+      transition: all 500ms;
+    }
   }
 }
 
